--- a/main.html
+++ b/main.html
@@ -7,8 +7,70 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+    <table border="1" >
+      <tr>
+		  <!-- row 1 col 1 -->
+		 <td>
+			 <table  border="1" align="center" cellspacing="0" width= "100%"  height="100%">
+				 <tr>
+					 <th colspan="2">Nested Table 2</th> 
+				 </tr>
+				 <tr>
+					 <th>Column 1</th>
+					  <th>Column 2</th>
+				 </tr>
+				 <tr>
+					 <td>abc</td>
+                    <td>def</td>
+				 </tr>
+			 </table>
+		 </td>
+		  <!-- row 1 col 2 -->
+		  <td>
+			  <table border="1" cellspacing ="0" cellPadding="10">
+				  <tr>
+					  <th>Nested Table 1</th>
+				  </tr>
+				   <tr>
+					   <td><ul>
+						   <li>List Item 1</li>
+						   <li>List Item 2</li>
+						   <li>List Item 3</li>
+					   </ul></td>
+				   </tr>
+			  </table>
+		  </td>
+	  </tr>
+		
+		<!-- row 2 col 1 -->
+	 <tr>
+		 <td>
+			<table border="1" align="center" cellspacing="0">
+				<tr>
+					<th colspan="2">Nested Table 3</th>
+				</tr>
+				<tr>
+					<td><a href="#">Nested Table</a></td>   
+					<td>Demo Continued</td>
+				</tr>
+			</table> 
+		 </td>
+		 <!-- row 2 col 2 -->
+		 <td>
+			 <table border="1" align="center" cellspacing="0">
+				<tr>
+					<th colspan="2">Nested Table 4</th>
+				</tr>
+				<tr>
+					<td colspan="2" style="background-color:black; color:white"; align="center";>HTML</td >   
+				</tr>
+			</table> 
+		 </td>
+		 </td>
+	 </tr>
+		
+		
+		
     </table>
   </body>
 </html>
