--- a/main.html
+++ b/main.html
@@ -33,9 +33,9 @@
 				  </tr>
 				   <tr>
 					   <td><ul>
-						   <li>List Item 1</li>
-						   <li>List Item 2</li>
-						   <li>List Item 3</li>
+						   <li>List item 1</li>
+						   <li>List item 2</li>
+						   <li>List item 3</li>
 					   </ul></td>
 				   </tr>
 			  </table>
@@ -67,10 +67,7 @@
 			</table> 
 		 </td>
 		 </td>
-	 </tr>
-		
-		
-		
+	 </tr>		
     </table>
   </body>
 </html>
